--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Etch-a-Sketch</title>
     <meta name="author" content="Thiago Ferreira">
-    <meta name="description" content="Play online the retro Snake game developed in Javascript">
-    <meta name="keywords" content="game, snake, javascript, online">
+    <meta name="description" content="Online Etch-A-Sketch where users can draw on the sketchpad using the mouse">
+    <meta name="keywords" content="game, Etch-A-Sketch, javascript, online">
     <meta name="robots" content="index, follow">
 
     <!-- CSS only -->
